--- a/FrontProactIF/src/main/webapp/tableauBord.html
+++ b/FrontProactIF/src/main/webapp/tableauBord.html
@@ -16,7 +16,6 @@
     <body>
         <ul>
             <li><a href="interventionCoursEmploye.html">Intervention en cours</a></li>
-            <li><a href="cloturerIntervention.html">Cloturer l'intervention</a></li>
             <li><a class="active" href="tableauBord.html">Tableau de Bord</a></li>
             <li style="float:right"><a href="index.html" onclick="deconnexion()">Deconnexion</a></li>
         </ul>
@@ -51,6 +50,15 @@
                     <span class="texts">Type</span>
                     <span class="champs" id="type"></span>
                     <br>
+                    <span class="texts" id="animalT">Animal</span>
+                    <span class="champs" id="animal"></span>
+                    <br>
+                    <span class="texts" id="objetT">Objet</span>
+                    <span class="champs" id="objet"></span>
+                    <br>
+                    <span class="texts" id="entrepriseT">Entreprise</span>
+                    <span class="champs" id="entreprise"></span>
+                    <br>
                     <span class="texts">Date Emission</span>
                     <span class="champs" id="dateDebut"></span>
                     <br>
@@ -63,6 +71,12 @@
             </div>
         </div>
         <script type="text/javascript">
+            document.getElementById("objet").style.display = 'none';
+            document.getElementById("entreprise").style.display = 'none';
+            document.getElementById("objetT").style.display = 'none';
+            document.getElementById("entrepriseT").style.display = 'none';
+            document.getElementById("animal").style.display = 'none';
+            document.getElementById("animalT").style.display = 'none';
 
             var googleMapInstance = null;
 
@@ -84,6 +98,31 @@
 
                     $("#statut").html(inter.statut);
                     $("#type").html(inter.type);
+                    if (inter.type === "Animal") {
+                        $("#animal").html(data.nomAnimal);
+                        document.getElementById("objet").style.display = 'none';
+                        document.getElementById("entreprise").style.display = 'none';
+                        document.getElementById("objetT").style.display = 'none';
+                        document.getElementById("entrepriseT").style.display = 'none';
+                        document.getElementById("animal").style.display = 'initial';
+                        document.getElementById("animalT").style.display = 'initial';
+                    } else if (inter.type === "Livraison") {
+                        $("#objet").html(inter.objet);
+                        $("#entreprise").html(inter.entreprise);
+                        document.getElementById("animal").style.display = 'none';
+                        document.getElementById("animalT").style.display = 'none';
+                        document.getElementById("objet").style.display = 'initial';
+                        document.getElementById("entreprise").style.display = 'initial';
+                        document.getElementById("objetT").style.display = 'initial';
+                        document.getElementById("entrepriseT").style.display = 'initial';
+                    } else {
+                        document.getElementById("objet").style.display = 'none';
+                        document.getElementById("entreprise").style.display = 'none';
+                        document.getElementById("objetT").style.display = 'none';
+                        document.getElementById("entrepriseT").style.display = 'none';
+                        document.getElementById("animal").style.display = 'none';
+                        document.getElementById("animalT").style.display = 'none';
+                    }
                     $("#dateDebut").html(inter.dateDebut);
                     $("#dateFin").html(inter.dateFin);
                     $("#description").html(inter.description);
@@ -132,7 +171,7 @@
                                 icon: iconImage
                             });
 
-                            attachInfoWindow(marker, infowindow, obj.description, obj);
+                            attachInfoWindow(marker, infowindow, marker.title + " : " + obj.description + " Type : " + obj.type, obj);
                         });
                     } else {
                         console.log(data.intervention);
